[package]
name = "hprof"
version = "0.1.3"
authors = ["Corey Richardson <corey@octayn.net>"]
description = "A simple hierarchical profiler"
documentation = "https://cmr.github.io/hprof"
repository = "https://github.com/cmr/hprof"
readme = "README.md"
license = "BSL-1.0"

[dependencies]
clock_ticks = "0.1.0"
log = "0.3.4"

[features]
unstable = []
